# dreamcoder

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  README_en.md  package.json
.omc/: project-memory.json
.omc/sessions/: 07db39b9-52cd-4784-b90c-5798235d2a40.json  bad901df-8e97-4225-9672-2f5de0b8a571.json  f036cfa0-46cd-43f9-a5ee-ab0f802cd30e.json
.omc/state/: agent-replay-07db39b9-52cd-4784-b90c-5798235d2a40.jsonl  hud-stdin-cache.json  last-tool-error.json  mission-state.json  subagent-tracking.json
adapters/: README.md
adapters/common/: chat-queue.ts  config.ts  format.ts  session-recovery.ts  ws-bridge.ts
adapters/dingtalk/: ai-card.ts  index.ts  media.ts  (+1 more)
desktop/: README.md  bunfig.toml  index-html.test.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite-config.test.ts  vite.config.ts  vitest.config.ts
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri-config.test.ts  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  windows-installer-hooks.nsh
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  macos_notifications.m  main.rs
docs/: activity_rule.md
runtime/: mac_helper.py  requirements-win.txt  test_helpers.py  win_helper.py
scripts/: count-app-loc.ts  release.ts  repro-issue-247-real.ts  start-web-ui.sh
sidecar/: package.json  preload.ts  tsconfig.json
src/: cost-tracker.ts  localRecoveryCli.ts  main.tsx  query.ts  setup.ts
stubs/: ant-claude-for-chrome-mcp.ts  color-diff-napi.ts
website/: docusaurus.config.ts
(+892 files in other folders)
